/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.runtime.v1;

import "gogoproto/gogo.proto";

message ObjectId {
    string name = 1;
}

message ObjectMeta {
    ObjectId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    uint64 revision = 2 [
        (gogoproto.casttype) = "ObjectRevision"
    ];
    map<string, string> labels = 3;
}
