/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.runtime.v1;

option java_package = "io.atomix.api.runtime.v1";
option java_outer_classname = "PrimitiveV1";
option java_multiple_files = true;

import "gogoproto/gogo.proto";

message PrimitiveId {
    string name = 1;
}
